--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script type="module" src="main.tsx"></script>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./dist/tailwind.css" />
   </head>
   <body>
     <div id="root"></div>
