--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>UniWood</title>
+    <link rel="icon" href="./assets/images/logo.svg" type="image/icon type">
     <script type="module" src="main.tsx"></script>
     <link rel="stylesheet" href="./dist/tailwind.css" />
   </head>
