--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./assets/images/logo.svg" type="image/icon type" />
     <script type="module" src="main.tsx"></script>
     <link rel="stylesheet" href="./dist/tailwind.css" />
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./tailwind.css" />
   </head>
   <body>
     <div id="root"></div>
